# lading

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage-main.yml  mutation-testing.yml
.rules/: python-exception-design-raising-handling-and-logging.md
crate_tools/: bump_version.py  publish_workspace_versioning.py  run_publish_check.py
crate_tools/unittests/publish_check/: conftest.py  test_command_handling.py  test_stream_helpers.py
docs/: cmd-mox-usage-guide.md  contents.md  developers-guide.md  lading-design.md  repository-layout.md  roadmap.md  scripting-standards.md  usage-guide.md  users-guide.md
docs/adr/: 003-three-tier-python-linting.md  004-in-process-metrics-backend.md
docs/execplans/: regenerate-lockfiles.md
lading/: __init__.py  cli.py  cli_options.py  config.py  exceptions.py  toml_coerce.py
lading/commands/: __init__.py  _shared.py  bump.py  bump_docs.py  bump_lockfiles.py  bump_manifests.py  bump_output.py  bump_pipeline.py  bump_readme.py  bump_toml.py  cargo_output_adapter.py  lockfile.py  publish.py  publish_diagnostics.py  publish_errors.py  publish_execution.py  publish_index_check.py  publish_manifest.py  publish_pipeline.py  publish_plan.py  publish_preflight.py  publish_staging.py
lading/runtime/: __init__.py  runner.py  subprocess_runner.py
lading/testing/: __init__.py  cmd_mox_runner.py  toml_utils.py
lading/toml_coerce/: __init__.py  _core.py  _mappings.py  _scalars.py  _sequences.py
lading/utils/: __init__.py  commands.py  metrics.py  path.py  process.py
lading/workspace/: __init__.py  _coercion.py  graph_build.py  metadata.py  models.py
scripts/: __init__.py  bump_version.py  typos_rollout.py
tests/: conftest.py
tests/bdd/: conftest.py  toml_utils.py
tests/bdd/features/: cli.feature  commands_catalogue.feature  publish.feature
tests/bdd/steps/: config_fixtures.py  manifest_fixtures.py  metadata_fixtures.py  test_bump_steps.py  test_commands_catalogue_steps.py  test_common_steps.py  test_publish_feature_steps.py  test_publish_fixtures.py  test_publish_given_steps.py  test_publish_helpers.py  test_publish_infrastructure.py  test_publish_steps.py  test_publish_then_steps.py  test_publish_when_steps.py  test_workspace_metadata_steps.py
tests/e2e/: __init__.py  conftest.py  test_e2e.py
tests/e2e/features/: e2e.feature
tests/e2e/helpers/: __init__.py  e2e_steps_helpers.py  git_helpers.py  workspace_builder.py
tests/e2e/steps/: __init__.py  test_e2e_steps.py
tests/helpers/: bump_builders.py  cwd.py  workspace_builders.py  workspace_helpers.py  workspace_metadata.py
tests/integration/: __init__.py  test_cargo_shim_cli.py  test_lockfile_discovery.py
tests/unit/: conftest.py  test_bump_command_integration.py  test_bump_command_internals.py  test_bump_context_and_output.py  test_bump_context_properties.py  test_bump_dependency_sections.py  test_bump_documentation_updates.py  test_bump_lockfile_rebuild.py  test_bump_lockfile_repository.py  test_bump_lockfiles.py  test_bump_manifest_editing.py  test_bump_manifest_updates.py  test_bump_manifest_writes.py  test_bump_manifest_writing.py  test_bump_output_formatting.py  test_bump_readme.py  test_bump_rebuild_lockfiles_resolution.py  test_bump_result_formatting.py  test_bump_selector_ops.py  test_bump_selectors.py  test_bump_toml_helpers.py  test_bump_toml_ops.py  test_cargo_metadata_loading.py  test_cargo_shim.py  test_cli.py  test_cmd_mox_integration.py  test_command_failure_messages.py  test_command_shared.py  test_config.py  test_dependency_sections.py  test_e2e_workspace_builder.py  test_lockfile.py  test_lockfile_message_snapshots.py  test_metadata_helpers.py  test_publish_formatting.py  test_publish_patch_strategy.py  test_publish_planning.py  test_publish_staging.py  test_publish_staging_properties.py  test_subprocess_runner_logging.py  (+6 more)
tests/unit/__snapshots__/: test_bump_command_internals.ambr  test_bump_context_and_output.ambr  test_bump_documentation_updates.ambr  test_bump_lockfile_rebuild.ambr  test_bump_lockfiles.ambr  test_bump_manifest_updates.ambr  test_bump_readme.ambr  test_cli.ambr  test_cmd_mox_integration.ambr  test_command_failure_messages.ambr  test_dependency_sections.ambr  test_lockfile_message_snapshots.ambr  test_subprocess_runner_logging.ambr  test_toml_coerce.ambr
tests/unit/publish/: conftest.py  preflight_test_utils.py  test_canonicalisation_properties.py  test_cargo_output_adapter.py  test_command_helpers.py  test_command_logging.py  test_downgrade_metrics.py  test_formatting_helpers.py  test_index_detection.py  test_index_order_properties.py  test_packaging.py  test_phase_dispatch.py  test_plan_validation.py  test_preflight_arguments.py  test_preflight_cargo_runner.py  test_preflight_checks.py  test_preflight_lockfile_validation.py  test_publish_diagnostics.py  test_publish_execution_helpers.py  test_publish_manifest_strategies.py  test_run_integration.py  test_run_preflight.py  test_run_preflight_properties.py  test_run_publish_ordering.py  test_run_workspace_config.py  test_snapshot_messages.py
tests/unit/publish/__snapshots__/: test_formatting_helpers.ambr  test_packaging.ambr  test_phase_dispatch.ambr  test_preflight_cargo_runner.ambr  test_preflight_checks.ambr  test_preflight_lockfile_validation.ambr  test_run_workspace_config.ambr  test_snapshot_messages.ambr
tests/unit/utils/: test_commands.py  test_metrics.py  test_metrics_properties.py  test_path.py  test_process.py
tests/unit/utils/__snapshots__/: test_metrics.ambr
tests/workflow_contracts/: __init__.py  test_mutation_testing.py
