[project]
name = "crate-tools"
version = "0.1.0"
description = "crate-tools package"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "ISC" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["rust", "cargo", "workspace", "release", "lading"]
authors = [{ name = "Payton McIntosh", email = "pmcintosh@df12.net" }]
dependencies = [
    "cyclopts>=2.9",
    "markdown-it-py>=3,<4",
    "msgspec>=0.18,<1.0",
    "plumbum>=1.8",
    "tomlkit==0.13.*",
]

[project.scripts]
lading = "lading.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-bdd",
    "ruff",
    "pyright",
    "pytest-timeout",
    "cmd-mox@git+https://github.com/leynos/cmd-mox@f583c279a15760aba5cfd9bddf1fbbe9b1f8c429",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["crate_tools", "lading"]
exclude = ["crate_tools/unittests", "**/unittests"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
exclude = ["tests/bdd/steps/test_bump_steps.py"]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "S",        # disallow things like "exec"; also restricts "assert" but I just NOQA it when I really need it
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "FURB",
    "B",
    "RUF",
    "LOG",
    "Q",
    "PT",
    "RSE",
    "PERF",
    "TRY",
    "EM",
    "D",
    "ANN",
    "C90",
    "PLR0913",
]
extend-ignore = [
    "D203",  # Conflicts with D211; prefer enforcing no blank line before class docstring.
    "D213",  # Conflicts with D212; keep summary on the first line.
]
per-file-ignores = {"**/test_*.py" = ["S101", "PLR0913"]}

[tool.ruff.lint.mccabe]
max-complexity = 9

[tool.ruff.lint.pylint]
max-args = 4

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = [
    "typing",
    "datetime",
    "collections.abc",
    "dataclasses",
    "enum",
    "unittest.mock",
    "msgspec",
]

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"
"collections.abc" = "cabc"
datetime = "dt"
"unittest.mock" = "mock"
"msgspec.json" = "msjson"
typing = "typ"
dataclasses = "dc"

[tool.pytest.ini_options]
# Ensure asyncio fixtures create a new event loop for each test
asyncio_default_fixture_loop_scope = "function"
# Tests automatically killed after seconds elapsed
timeout = 30

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = [
    "crate_tools",
    "crate_tools.*",
    "lading",
    "lading.*",
    "scripts",
    "scripts.*",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
